# airdrum-app

./: Dockerfile  Makefile  README.md  airdrum.sh  docker-compose.yaml  pyproject.toml
airdrum_app/: airdrum.py  ball.py  debounce.py  range-detector.py  requirements.txt  setup.py  utils.py
airdrum_app/drum/: __init__.py  circular_hitbox.py  drum.py  drum_component.py  hitbox.py  rectangular_hitbox.py
